# generic-bloom-rs

./: Cargo.toml  README.md
src/: lib.rs  simple_filter.rs  traits.rs
src/traits/: filter.rs  mod.rs  set.rs
