# This file is part of generic-bloom.
#
# generic-bloom is free software: you can redistribute it and/or
# modify it under the terms of the GNU Affero General Public License
# as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# generic-bloom is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Affero General Public License for more details.  You should have
# received a copy of the GNU Affero General Public License along with
# generic-bloom. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "generic-bloom"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["bloom-filter", "bloom"]
categories = ["data-structures"]
authors = ["Morgan Hager <morgan.hager1@gmail.com>"]
description = "A generic implementation of Bloom filters using traits"
repository = "https://github.com/goose121/generic-bloom-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
num-traits = "0.2"